feat: activate base assets
